@@ -12,6 +12,7 @@ Changes in 0.60.1:
   * Fixed build-side bug handling meta characters ([,*,etc) in file names 
   * "cvc newpkg" now accepts pkgname=label syntax
   * files.contentsChanged() function updated to work with StreamSets
+  * Basic local changeset creation, retargeting, and commits work
 
 Changes in 0.60.0:
   * Changed changesets to compress individual files instead of the combined
